test/compile_errors/err_return_type_tail_mismatch.w
//! expect-check-fail: return type mismatch

fn bad_tail -> i32:
    "bad"

fn main:
    let _ = bad_tail()
